--- a/deeplearning1/nbs/lesson1 - matt.ipynb
+++ b/deeplearning1/nbs/lesson1 - matt.ipynb
@@ -357,7 +357,7 @@
    "source": [
     "So at this point we have defined the model's structure and loaded the pre-trained weights into the model.  We're ready to use it to *predict()* to get some answers!\n",
     "\n",
-    "Keras provides some functionality to get batches of data from directories - we'll use the coruses's wrapper function to load that data in easily."
+    "Keras provides some functionality to get batches of data from directories - we'll use the courses's provided wrapper function to load that data in easily."
    ]
   },
   {
@@ -382,7 +382,7 @@
    "source": [
     "We can now load in some images and make some predictions.\n",
     "\n",
-    "Lets get a few images and see what they are before we do any predictions - this is just for show so that we can visually see what we're feeding to the model. (we're getting the images from the validation set, but could be from anywhere)."
+    "Lets get a few images and see what they are before we do any predictions - this is just for show so that we can visually see what we're feeding to the model (we're getting the images from the validation set, but could be from anywhere)."
    ]
   },
   {
@@ -483,8 +483,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -518,13 +520,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we wanted to, we could now go ahead and \"finetune\" this network to retrain a new final layer to categorise \"dogs\" and \"cats\" like we did earlier."
+   ]
   }
  ],
  "metadata": {
