--- a/deeplearning1/nbs/lesson1 - matt.ipynb
+++ b/deeplearning1/nbs/lesson1 - matt.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +155,7 @@
     "from keras.layers.core import Flatten, Dense, Dropout, Lambda\n",
     "from keras.layers import Input\n",
     "from keras.layers.convolutional import Convolution2D, MaxPooling2D, ZeroPadding2D\n",
-    "from keras.optimizers import SGD, RMSprop\n",
+    "from keras.optimizers import SGD, RMSprop, Adam\n",
     "from keras.preprocessing import image"
    ]
   },
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So at this point we have defined the model's structure and loaded the pre-trained weights into the model.  We're ready to use it to *predict()* to get some answers!\n",
+    "So at this point we have defined the model's structure and loaded the pre-trained weights into the model.  We're ready to use it to *predict()* to get some answers without any further training.\n",
     "\n",
     "Keras provides some functionality to get batches of data from directories - we'll use the courses's provided wrapper function to load that data in easily."
    ]
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, we have 6 rows with 1000 probabilities per row.  This is because we have not \"finetuned\" this network like we did before, so we still have 1000 output nodes for classes like \"tench\" and \"goldfish\" (see above where we looked at *class_names[0:3]*)\n",
+    "So, we have 6 rows with 1000 probabilities per row.  This is because we have not \"finetuned\" this model like we did before, so we still have 1000 output nodes for classes like \"tench\" and \"goldfish\" (see above where we looked at *class_names[0:3]*)\n",
     "\n",
     "This should be ok though, since the \"best\" prediction should still be accurate.  We can do some acrobatices to get the best prediction out and simplify our output:"
    ]
@@ -523,7 +523,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we wanted to, we could now go ahead and \"finetune\" this network to retrain a new final layer to categorise \"dogs\" and \"cats\" like we did earlier."
+    "Lets do the finetuning and retraining to get this down to \"dogs\" vs \"cats\".\n",
+    "\n",
+    "Keras has already got the info about what classes we have from the training data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cats': 0, 'dogs': 1}\n",
+      "['cats', 'dogs']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (training_batches.class_indices)\n",
+    "print (list(iter(training_batches.class_indices)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now we know what we're dealing with, lets make those changes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the last layer\n",
+    "model.pop()\n",
+    "\n",
+    "# Lock the training on the remaining layers.\n",
+    "for layer in model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# Now add in the new layer\n",
+    "model.add(Dense(2, activation=\"softmax\"))\n",
+    "\n",
+    "# Recompile the model so we're ready for training\n",
+    "loss_rate = 0.001\n",
+    "model.compile(optimizer=Adam(lr=loss_rate), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Finally we need to adjust the class names to be \"dog\" and \"cat\" rather than the old ones (i.e. not \"tench\" et all)\n",
+    "# We use the class labels keras has automatically generated that to avoid hard-coding\n",
+    "class_names = list(iter(training_batches.class_indices))\n",
+    "for c in training_batches.class_indices:\n",
+    "    class_names[training_batches.class_indices[c]] = c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok now we can train (or fit) the model to the data again using the new \"finetuned\" model architecture.\n",
+    "\n",
+    "Remember, we've locked the middle layers (so we're keeping the VGG weights etc), and only training the final layer so that the weights etc coming in through from the VGG pre-trained layer are used to predict \"dog\" vs \"cat\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "23000/23000 [==============================] - 623s - loss: 0.1224 - acc: 0.9677 - val_loss: 0.0690 - val_acc: 0.9845\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb8090a4990>"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit_generator(training_batches, samples_per_epoch=training_batches.nb_sample, nb_epoch=1,\n",
+    "                validation_data=validation_batches, nb_val_samples=validation_batches.nb_sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once training is done, we can repredict and check what we get now:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9998 probability dogs\n",
+      "1.0000 probability dogs\n",
+      "1.0000 probability cats\n",
+      "1.0000 probability cats\n",
+      "1.0000 probability dogs\n",
+      "1.0000 probability dogs\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_batch(images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now, instead of seeing fairly unsure predictions for \"Persian_cat\" or \"Italian_greyhound\", we're seeing very strong confident predictions purely for cat vs dog."
    ]
   }
  ],
