--- a/deeplearning1/nbs/lesson1 - matt.ipynb
+++ b/deeplearning1/nbs/lesson1 - matt.ipynb
@@ -628,6 +628,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.6731e-04   9.9983e-01]\n",
+      " [  2.1475e-10   1.0000e+00]\n",
+      " [  1.0000e+00   8.6576e-10]\n",
+      " [  1.0000e+00   5.9757e-10]\n",
+      " [  1.4798e-09   1.0000e+00]\n",
+      " [  1.9255e-09   1.0000e+00]]\n",
+      "(6, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(images)\n",
+    "print (predictions)\n",
+    "print (predictions.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -652,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So now, instead of seeing fairly unsure predictions for \"Persian_cat\" or \"Italian_greyhound\", we're seeing very strong confident predictions purely for cat vs dog."
+    "So now, instead of seeing fairly unsure predictions for \"Persian_cat\" or \"Italian_greyhound\" over 1000 possible classes, we're seeing very strong confident predictions purely for cat vs dog."
    ]
   }
  ],
