--- a/deeplearning1/nbs/lesson1 - matt.ipynb
+++ b/deeplearning1/nbs/lesson1 - matt.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -422,7 +424,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets predict!"
+    "Ok so we have some images to work with - looking at them we as humans know that it is dog, dog, cat, cat, dog, dog.\n",
+    "\n",
+    "Lets feed those same images into our model and see what its predictions are:"
    ]
   },
   {
@@ -452,7 +456,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is not paticulary useful!  What is going on?  Lets take a look at the shape:"
+    "This is not paticulary useful!\n",
+    "\n",
+    "What is going on?  Lets take a look at the shape:"
    ]
   },
   {
@@ -476,9 +482,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, we have 6 rows with 1000 probabilities per row.  This is because we have not \"finetuned\" this model like we did before, so we still have 1000 output nodes for classes like \"tench\" and \"goldfish\" (see above where we looked at *class_names[0:3]*)\n",
+    "So, we have 6 rows with 1000 probabilities per row.\n",
     "\n",
-    "This should be ok though, since the \"best\" prediction should still be accurate.  We can do some acrobatices to get the best prediction out and simplify our output:"
+    "This is because we have not \"finetuned\" this model like we did before, so we still have 1000 output nodes for classes like \"tench\" and \"goldfish\" (see above where we looked at *class_names[0:3]*)\n",
+    "\n",
+    "This should be ok though, since the \"best\" prediction should still be accurate.  We can do some acrobatics to get the best prediction out and simplify our output:"
    ]
   },
   {
@@ -506,12 +514,17 @@
     "    # Get the predictions for the images using the pre-trained VGG model\n",
     "    predictions = model.predict(images)\n",
     "    \n",
-    "    # This will give us 4 rows of 1000 predictions each.\n",
-    "    # Use np.argmax to get the index of the prediction with the highest value for each row\n",
+    "    # This will give us 6 rows, each with an array of 1000 values which are the VGG model's probabilities for each\n",
+    "    # of its classes.\n",
+    "    #\n",
+    "    # For each row, we want to get the *index* of the highest probability prediction VGG had.  By getting the index\n",
+    "    # of that probability, this allows us to get the probability value itself, and also lookup the class_name as well.\n",
+    "    #\n",
+    "    # We can use np.argmax to easily get the index with the highest value in each of the rows:\n",
     "    highest_index = np.argmax(predictions, axis=1)\n",
     "    \n",
-    "    # For each prediction, get the highest prediction's index in the array of 1000 predictions.\n",
-    "    # Once we have the index, use it to lookup the names we loaded earlier, and get the probability value itself.\n",
+    "    # So for each prediction, get the index that had the highest probability.\n",
+    "    # Once we have the index, use it to lookup the class name and the probability value itself.\n",
     "    for i in range(len(predictions)):\n",
     "        index = highest_index[i]\n",
     "        print (\"{:.4f} probability {}\".format(predictions[i, index], class_names[index]))\n",
@@ -557,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Remove the last layer\n",
